modified:   17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -100,15 +100,15 @@
     "    public T Value                                                     \n",
     "    {    \n",
     "        get{ return this.value; }       \n",
-    "        set{ this.Value = value; }      \n",
+    "        set{ this.value = value; }      \n",
     "    }\n",
-    "    // -------------------------------------------------------------------------\n",
+    "    //--------------------------------------------------------------------------\n",
     "    public List<TreeNode<T>> Children\n",
     "    {\n",
     "        // read-only\n",
     "        get{ return this.children; }\n",
     "    }\n",
-    "    // -------------------------------------------------------------------------\n",
+    "    //--------------------------------------------------------------------------\n",
     "\n",
     "\n",
     "\n",
@@ -134,7 +134,7 @@
     "        this.Value = value;\n",
     "\n",
     "    }\n",
-    "    // ------------------------------------------------------------------------\n",
+    "    //--------------------------------------------------------------------------\n",
     "\n",
     "\n",
     "\n",
@@ -171,14 +171,14 @@
     "        this.children.Add( childToBeAdded );\n",
     "      \n",
     "    }\n",
-    "    // -------------------------------------------------------------------------\n",
+    "    //--------------------------------------------------------------------------\n",
     "    //--------------------------- S E A R C H ----------------------------------\n",
     "    public TreeNode<T> GetChild( int index )\n",
     "    {\n",
     "        // return the child node at the specified index\n",
     "        return this.children[ index ] ;\n",
     "    }\n",
-    "    // -------------------------------------------------------------------------\n",
+    "    //--------------------------------------------------------------------------\n",
     "\n",
     "} "
    ]
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -214,7 +214,172 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Tree<T>\n",
+    "{\n",
+    "\n",
+    "    // FIELD DEFINITION --------------------------------------------------------\n",
+    "    private TreeNode<T> root;\n",
+    "    //--------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "    // PROPERTY DEFINITIONS ----------------------------------------------------\n",
+    "    public TreeNode<T> Root\n",
+    "    {\n",
+    "        // Read-only\n",
+    "        get{ return this.root; }\n",
+    "    }\n",
+    "    //--------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "    // CONSTRUCTORS ------------------------------------------------------------\n",
+    "    public Tree( T value )\n",
+    "    {\n",
+    "\n",
+    "        // We must ensure that each new Tree's root node contains a value.\n",
+    "        // If one is not provided, we should throw an exception\n",
+    "        if( value == null )\n",
+    "        {\n",
+    "            throw new ArgumentNullException(\n",
+    "                \"You must provide a value for the Tree's root node.\"\n",
+    "            );\n",
+    "        }\n",
+    "\n",
+    "        // We may then establish a root node for the new tree\n",
+    "        // which carries the specified value. \n",
+    "        this.root = new TreeNode<T>( value );\n",
+    "        \n",
+    "    }\n",
+    "    //--------------------------------------------------------------------------\n",
+    "    public Tree( T value, params Tree<T>[] children ) : this( value )\n",
+    "    {\n",
+    "\n",
+    "        // Iterating For Each child specified in the Tree params:\n",
+    "        foreach ( Tree<T> child in children )\n",
+    "        {\n",
+    "            \n",
+    "            // Append the current child to the List of children\n",
+    "            this.root.AddChild( child.root );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "    //--------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "    // METHODS -----------------------------------------------------------------\n",
+    "    //------------------------- T R A V E R S A L ------------------------------\n",
+    "    public void PrintDFS( TreeNode<T> root, string spaces )\n",
+    "    {\n",
+    "\n",
+    "        // If the specified Node is null, then it's a Node that has no parent. \n",
+    "        // So it must therefore either be the root, or else an invalid Node.\n",
+    "        // As such, we must exit the method accordingly \n",
+    "        if( this.root == null )\n",
+    "        {\n",
+    "            return;\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Print the specified number of spaces, \n",
+    "        // followed by the specified node value\n",
+    "        Console.WriteLine( spaces + root.Value );\n",
+    "\n",
+    "\n",
+    "        // Set up a pointer at the specified node's first child\n",
+    "        TreeNode<T> child = null;\n",
+    "\n",
+    "\n",
+    "        // Iterating For every child index in the List of child nodes:\n",
+    "        for( int childIndex = 0; childIndex < root.Children.Count; childIndex++ )\n",
+    "        {\n",
+    "\n",
+    "            // Point to the child at the current child index\n",
+    "            child = root.GetChild( childIndex );\n",
+    "\n",
+    "\n",
+    "            // Recursively call PrintDFS on the child under the pointer,\n",
+    "            // taking care to also append some additional whitespace\n",
+    "            PrintDFS( child, spaces + \"   \" );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "    //--------------------------------------------------------------------------\n",
+    "    public void TraverseDFS()\n",
+    "    {\n",
+    "\n",
+    "        // Begin the DFS traversal of the tree at the root,\n",
+    "        // initially starting with no separating whitespace \n",
+    "        this.PrintDFS( this.root, string.Empty );\n",
+    "\n",
+    "    }\n",
+    "    //--------------------------------------------------------------------------\n",
+    "  \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Tree<int> tree = new Tree<int>( \n",
+    "    7, \n",
+    "    new Tree<int>( 19, new Tree<int>(1), new Tree<int>(12), new Tree<int>(31) ), \n",
+    "    new Tree<int>( 21 ), \n",
+    "    new Tree<int>( 14, new Tree<int>(23), new Tree<int>(6))\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "   19\n",
+      "      1\n",
+      "      12\n",
+      "      31\n",
+      "   21\n",
+      "   14\n",
+      "      23\n",
+      "      6\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree.TraverseDFS()"
+   ]
   }
  ],
  "metadata": {
