modified:   17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
@@ -323,6 +323,48 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Instantiation and Example Usage"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the example tree below:\n",
+    "   \n",
+    "<img src=\"../_img/TreeTerminology.png\" style=\"display: block; margin: auto; width: 650px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We may create roughly the same structure by instatiating a new `Tree<int>` specified with following arguments:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
