modified:   17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this **Dynamic implementation of the Tree**, we will need to define a pait of classses following the pattern below: \n",
+    "For this **Dynamic implementation of the Tree**, we will need to define a pair of classses following the pattern below: \n",
     "1. A `TreeNode<T>` class $-$ will store a single Node of the Tree along with a `List<T>` of it's Children Nodes."
    ]
   },
