modified:   17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
@@ -70,6 +70,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
