modified:   17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
@@ -88,7 +88,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -218,7 +218,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -383,7 +383,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -407,7 +407,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -433,10 +433,30 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "file_extension": ".cs",
+   "mimetype": "text/x-csharp",
+   "name": "C#",
+   "pygments_lexer": "csharp",
+   "version": "8.0"
+  },
+  "orig_nbformat": 4,
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [],
+      "name": "csharp"
+     }
+    ]
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
