modified:   17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -88,7 +88,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -218,7 +218,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -383,7 +383,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -407,26 +407,10 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n",
-      "   19\n",
-      "      1\n",
-      "      12\n",
-      "      31\n",
-      "   21\n",
-      "   14\n",
-      "      23\n",
-      "      6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tree.TraverseDFS()"
    ]
