--- a/17. Trees and Graphs/DFS and BFS Traversal.ipynb
+++ b/17. Trees and Graphs/DFS and BFS Traversal.ipynb
@@ -88,12 +88,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In $.NET$, The directory tree of the file system is accessible through the [System.IO.DirectoryInfo](https://learn.microsoft.com/en-us/dotnet/api/system.io.directoryinfo?view=net-8.0) class, so we can therefore traverse a file system tree by using a standard tree traversal algorithm, such as **Depth-First Search (DFS)**, as demonstrated below:"
+    "In $.NET$, The directory tree of the file system is accessible through the [System.IO.DirectoryInfo](https://learn.microsoft.com/en-us/dotnet/api/system.io.directoryinfo?view=net-8.0) class, so we can therefore traverse a file system tree by using a standard tree traversal algorithm, such as **Depth-First Search (DFS)**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the `System.IO` namespace gives us access to the `DirectoryInfo` class\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -102,18 +118,33 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
    "source": [
-    "// Using the System.IO namespace gives us access to the DirectoryInfo class\n",
     "using System.IO;"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, we define a custom `TraverseDirectoryUsingDFS` method which recursively traverses a file directory by implementing a **Depth First Search** traversal of a specified `DirectoryInfo` object:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -122,13 +153,11 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
    "source": [
-    "// Define a a custom TraverseDirectoryUsingDFS method which recursively traverses a file directory\n",
-    "// by implementing a Depth First Search traversal of a DirectoryInfo object\n",
     "public static void TraverseDirectoryUsingDFS( DirectoryInfo dir, string spaces )\n",
     "{\n",
     "    \n",
@@ -157,8 +186,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now provide an overload for the `TraverseDirectoryUsingDFS` method that takes a `directoryPath` string with which it may initiate the **DFS** traversal:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -167,13 +212,11 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
    "source": [
-    "// Provide an overload for the TraverseDirectoryUsingDFS method\n",
-    "// that takes a Directory Path string with which it may initiate the DFS traversal \n",
     "public static void TraverseDirectoryUsingDFS( string directoryPath )\n",
     "{\n",
     "\n",
@@ -186,8 +229,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, beginning at the *current directory level* (`./`), let's **Traverse the Directory Using DFS**:\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -196,7 +255,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
@@ -211,8 +270,7 @@
     }
    ],
    "source": [
-    "// Begining at the current directory level, Traverse the Directory Using DFS\n",
-    "TraverseDirectoryUsingDFS(@\"./\");"
+    "TraverseDirectoryUsingDFS( @\"./\" );"
    ]
   }
  ],
