modified:   17. Trees and Graphs/DFS and BFS Traversal.ipynb

--- a/17. Trees and Graphs/DFS and BFS Traversal.ipynb
+++ b/17. Trees and Graphs/DFS and BFS Traversal.ipynb
@@ -161,9 +161,9 @@
     "public static void TraverseDirectoryUsingDFS( DirectoryInfo dir, string spaces )\n",
     "{\n",
     "    \n",
-    "    // Print the current number of spaces preceeding the current directory\n",
-    "    // within the current level of depth of the DFS traversal\n",
-    "    // followed by the Full Name of the specified directory\n",
+    "    // Print the current number of spaces representing  \n",
+    "    // the current level of depth within the DFS traversal,\n",
+    "    // immeadiately followed by the Full Name of the currently specified directory\n",
     "    Console.WriteLine( spaces + dir.FullName );\n",
     "\n",
     "\n",
