modified:   17. Trees and Graphs/DFS and BFS Traversal.ipynb

--- a/17. Trees and Graphs/DFS and BFS Traversal.ipynb
+++ b/17. Trees and Graphs/DFS and BFS Traversal.ipynb
@@ -272,6 +272,228 @@
    "source": [
     "TraverseDirectoryUsingDFS( @\"./\" );"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Breadth First Search"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Breadth-First Search (BFS)** is another algorithm for traversing branched data structures (like trees and graphs). The **BFS** algorithm first traverses the start node, then all its direct children, then their direct children, and so on. \n",
+    "   \n",
+    "This approach is also known as the **wavefront traversal**, because it looks like the waves caused by a stone thrown into a lake.  \n",
+    "   \n",
+    "The **BFS** algorithm is a very simple implementation of a `Queue` data structure which always first traverses the nodes that are closest to the start node, and then the more distant, and so on, until it reaches the farthest. The **BFS** algorithm is very widely used in problem solving, (e.g. for *finding the shortest path* in a labyrinth)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The Breadth First Search Algorithm (Implemented using a `Queue`)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. $Enqueue$ the starting node in the Queue. \n",
+    "2. While the Queue is not empty, repeat the following two steps: \n",
+    "   - $Dequeue$ the next node from the Queue and then print it\n",
+    "   - Add all children belonging to that next node in the Queue."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example: Traversing Storage Directories Using BFS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once again, consider the parent folder for this section:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"_img/DirectoryStructure.jpg\" style=\"display: block; margin: auto; width: 300px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's define a method similar to the one defined above which can do roughly the same task using **Breadth First Search** traversal instead. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, we define a custom `TraverseDirectoryUsingBFS` method which iteratively traverses a file directory by implementing a **Breadth First Search** traversal of children associated with a `DirectoryInfo` object that is initialized using a specified `directoryPath` string:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public static void TraverseDirectoryUsingBFS( string directoryPath )\n",
+    "{\n",
+    "\n",
+    "    // Allocate a new Directory Info Queue to store the Visited Directories\n",
+    "    Queue<DirectoryInfo> visitedDirectories = new Queue<DirectoryInfo>();\n",
+    "\n",
+    "\n",
+    "    // Enqueue the start node in the Queue\n",
+    "    visitedDirectories.Enqueue( new DirectoryInfo( directoryPath) );\n",
+    "\n",
+    "\n",
+    "    // While the Queue is not empty:\n",
+    "    while( visitedDirectories.Count > 0 )\n",
+    "    {\n",
+    "        \n",
+    "        // Dequeue the next node from the Queue\n",
+    "        DirectoryInfo currentDirectory = visitedDirectories.Dequeue();\n",
+    "\n",
+    "\n",
+    "        // Print it\n",
+    "        Console.WriteLine( currentDirectory.FullName );\n",
+    "\n",
+    "        \n",
+    "        // Add all children belonging to that next node in the Queue:\n",
+    "        \n",
+    "        //    Invoke the GetDirectories method \n",
+    "        //    to store an array of the current directory's children\n",
+    "        DirectoryInfo[] children = currentDirectory.GetDirectories();   \n",
+    "\n",
+    "        //   Iterating For Each child in the array of children\n",
+    "        foreach( DirectoryInfo child in children )\n",
+    "        {\n",
+    "\n",
+    "            // Enqueue the current child to the Queue\n",
+    "            visitedDirectories.Enqueue( child );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe that, since this implementation is iterative, rather than recursive, our output results as a *flat representation* which is not indented with leading spaces that suggest the current depth, as was the case with the **DFS** implementation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\\n",
+      "c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\Custom Implementations\n",
+      "c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\_img\n"
+     ]
+    }
+   ],
+   "source": [
+    "TraverseDirectoryUsingBFS(@\"./\")"
+   ]
   }
  ],
  "metadata": {
