--- a/17. Trees and Graphs/DFS and BFS Traversal.ipynb
+++ b/17. Trees and Graphs/DFS and BFS Traversal.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -258,7 +258,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\\n",
+      "  c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\Custom Implementations\n",
+      "  c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\_img\n"
+     ]
+    }
+   ],
    "source": [
     "TraverseDirectoryUsingDFS( @\"./\" );"
    ]
@@ -368,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -443,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -455,7 +465,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\\n",
+      "c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\Custom Implementations\n",
+      "c:\\Users\\harry\\Dev\\projects\\Notes On C-Sharp\\17. Trees and Graphs\\_img\n"
+     ]
+    }
+   ],
    "source": [
     "TraverseDirectoryUsingBFS(@\"./\")"
    ]
