modified:   17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb

--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -148,9 +148,9 @@
     "|Leaf|A **Leaf** is a **node without child nodes**. In our example – `1`, `12`, `31`, `21`, `23` and `6`.|\n",
     "|Internal Node|**Internal nodes** are the nodes, which are **neither a leaf, nor a root** (all nodes, which have parent and at least one child). Such nodes are `19` and `14`.|\n",
     "|Path|**Path** is called a **sequence of nodes connected with edges**, in which there is **no repetition of nodes**.<br><br>Example of path is the sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `7` $\\rightarrow$ `21`.<br><br>The sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `23` is *not* a path, because `19` and `23` are *not connected*.|\n",
-    "|Depth|The **Depth** of a node we refers to the **length of the path from the root to certain node**. In our example `7` as root has depth zero, `19` has a depth of **one** and `23` – a depth **two**.|\n",
+    "|Depth|The **Depth** of a node we refers to the **length of the path from the root to certain node**.<br>In our example `7` as root has depth zero, `19` has a depth of **one** and `23` – a depth of **two**.|\n",
     "|Height|The **Height** of tree is the **maximum depth** of all its nodes.<br>In our example the tree height is **2**.|\n",
-    "|Degree|The **Degree** of node we is the **number of direct children** of the given node. The degree of `19` and `7` is **three**, but the degree of `14` is **two**. The leaves have a degree of **zero**.|\n",
+    "|Degree|The **Degree** of node we is the **number of direct children** of the given node.<br>In our example, the degree of `19` and `7` is **three**, but the degree of `14` is **two**. The leaves have a degree of **zero**.|\n",
     "|Branching Factor|**Branching factor** is the **maximum of the degrees of all nodes** in the tree. In our example the **maximum degree** of the nodes is **3**, so the **branching factor** is **3**.|"
    ]
   },
