modified:   16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb new file:   17. Trees and Graphs/Custom Implementations/Trees/Binary Trees.ipynb renamed:    17. Trees and Graphs/Custom Implementations/Dynamic Trees.ipynb -> 17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb

--- a/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
@@ -3,14 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "# 16. Linear Data Stuctures"
    ]
@@ -18,14 +11,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Custom Implementations\n",
     "### Linked Lists (Dynamic Implementation)\n",
@@ -35,14 +21,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "In comparison to other Linear Data Structures, the [Static List (Array-based)](../Lists/Static%20Lists%20(Array-based).ipynb) has a *serious disadvantage* – the operations for *inserting* and *removing* items from the inside of the array requires *rearrangement of the elements* (*shift operations*).   \n",
     "   \n",
@@ -52,30 +31,15 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
-    "In such cases, it is advisable to use another structure called **Linked Lists**,  \n",
-    "a **dynamic**, rather than a static list implementation, in which each element along the linear structure **retains information about their neighboring element**."
+    "In such cases, it is advisable to use another structure called **Linked Lists**, a **dynamic**, rather than a static list implementation, in which each element along the linear structure **retains information about their neighboring element**."
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -83,14 +47,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "### The Dynamic (Linked) List"
    ]
@@ -98,14 +55,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "#### Class Definition"
    ]
@@ -113,14 +63,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "For this classic, **Dynamic implementation of the Linked List**, we will need to define a **nested class** following the pattern below: \n",
     "1. the main `DynamicList<T>` class $-$ will hold a sequence of elements as well as the **head** and the **tail** of the list\n",
@@ -130,14 +73,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Using [Generics](../14.%20Defining%20Classes/Generics.ipynb), we may define such a Dynamically Linked structure to be able to hold any type of data, as defined below:"
    ]
@@ -153,7 +89,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -841,14 +777,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -856,14 +785,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "#### Instantiation and Example Usage"
    ]
@@ -871,14 +793,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "So let's now demonstrate some of the `DynamicList` features that we have defined above.  \n",
     "\n",
@@ -896,7 +811,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -915,7 +830,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -967,14 +882,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -982,14 +890,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "let's now populate our `linkedIntegerList` instance with consecutive integers ranging from $1$ to $7$ by appending each to the end of the list:"
    ]
@@ -1005,7 +906,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1027,7 +928,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1087,7 +988,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1106,14 +1007,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -1121,14 +1015,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Now that we have a fully populated our `linkedIntegerList`, let's now insert the value $99$ at $index\\,3$:"
    ]
@@ -1144,7 +1031,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1163,7 +1050,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1223,7 +1110,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1242,14 +1129,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -1257,14 +1137,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Now, let's add that same value at the head of the list, which resides at $index\\,0$:"
    ]
@@ -1280,7 +1153,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1299,7 +1172,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1359,7 +1232,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1378,14 +1251,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -1393,14 +1259,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "We can also add that same value at the tail of the list, residing at the $({NodeCount - 1)}^{th}\\,index$:"
    ]
@@ -1416,7 +1275,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -1435,7 +1294,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1495,7 +1354,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1514,14 +1373,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -1529,14 +1381,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "That sure is alot of duplicate values, let's go ahead and delete the first occurence of the stuff we just inserted by referencing it's element value.\n",
     "    \n",
@@ -1554,7 +1399,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1614,7 +1459,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1674,7 +1519,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1693,14 +1538,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -1708,14 +1546,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Now let's delete the last occurrence of the stuff we just inserted by referencing it's node index.\n",
     "   \n",
@@ -1733,7 +1564,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1793,7 +1624,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1853,7 +1684,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1872,14 +1703,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -1887,14 +1711,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Suppose our memory isn't so good, and we don't know if we got them all or not, so let's now search for any remaining stuff that we inserted:"
    ]
@@ -1910,7 +1727,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -1971,7 +1788,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -2024,14 +1841,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -2039,14 +1849,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Finally, let's delete the whole list and reset the node count back to 0:"
    ]
@@ -2062,7 +1865,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -2081,7 +1884,7 @@
      "kernelName": "csharp"
     },
     "vscode": {
-     "languageId": "polyglot-notebook"
+     "languageId": "csharp"
     }
    },
    "outputs": [
@@ -2136,6 +1939,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "C#"
   },
   "polyglot_notebook": {
    "kernelInfo": {
