modified:   17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Dynamic Trees.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> $Recall\\,from:$ [Dynamic (Linked) Lists](../../16.%20Linear%20Data%20Structures/Custom%20Implementations/Dynamic%20(Linked)%20Lists.ipynb)   \n",
+    "> $Recall\\,from:$ [Dynamic (Linked) Lists](../../../16.%20Linear%20Data%20Structures/Custom%20Implementations/Dynamic%20(Linked)%20Lists.ipynb)   \n",
     "> In a **dynamic**, rather than a *static* implementation, each element along the structure **retains information about their neighboring element**."
    ]
   },
